package com.deloitte.training.oodesignpatterns.creational.prototype;

public interface Prototype {

    Prototype customClone();
    
}
